--- a/package.json
+++ b/package.json
@@ -1,23 +1,56 @@
 {
-  "name": "abyssinian",
-  "version": "1.0.0",
-  "description": "",
+  "name": "abyssinian-server",
+  "version": "0.0.1",
+  "description": "abyssinian project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test",
+    "build": "webpack --config webpack.config.js",
+    "dev": "./node_modules/.bin/nodemon src/bin/dev.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cat-tower/abyssinian.git"
   },
-  "author": "",
+  "keywords": [
+    "koa",
+    "babel",
+    "webpack",
+    "ES6",
+    "react"
+  ],
+  "author": "cat-tower",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cat-tower/abyssinian/issues"
   },
   "homepage": "https://github.com/cat-tower/abyssinian#readme",
   "dependencies": {
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-register": "^6.9.0",
+    "json-loader": "^0.5.4",
     "koa": "^2.0.0",
-    "koa-convert": "^1.2.0"
+    "koa-convert": "^1.2.0",
+    "koa-cors": "0.0.16",
+    "koa-router": "^5.4.0",
+    "koa-static": "^3.0.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-node5": "^1.2.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-register": "^6.9.0",
+    "koa-webpack-dev-middleware": "^1.2.1",
+    "koa-webpack-hot-middleware": "^1.0.3",
+    "nodemon": "^1.9.2",
+    "webpack": "^1.13.1"
   }
 }
